<resources>
    <string name="app_name">Naung Inle Calendar</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string-array name="spinner_item">
        <item>Day</item>
        <item>Month</item>
        <item>Holidays</item>
    </string-array>

    <string-array name="holiday_spinner_item">
        <item>English</item>
        <item>Myanmar</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="date_picker">Go to</string>
    <string name="today">today</string>
    <string name="other_market_days_title">အခြားစျေးများ</string>
    <string name="naung_inle">နောင်အင်းလေး</string>
    <string name="calendar">ပြက္ခဒိန်</string>
    <string name="sasana_year">"သာသနာနှစ် "</string>
    <string name="sun">နွေ</string>
    <string name="mon">လာ</string>
    <string name="tue">ဂါ</string>
    <string name="wed">ဟူး</string>
    <string name="thu">တေး</string>
    <string name="fri">ကြာ</string>
    <string name="sat">နေ</string>

    <string name="san">ဆန်း</string>
    <string name="pyae">ပြည့်</string>
    <string name="sote">ဆုတ်</string>
    <string name="kwae">ကွယ်</string>
    <string name="special_day_image">image to highlight special day</string>
    <string name="big_watat_year">ဝါကြီးထပ်နှစ်</string>
    <string name="small_watat_year">ဝါငယ်ထပ်နှစ်</string>
    <string name="eng_era">ခရဇ်သက္ကရာဇ်</string>
    <string name="holidays">၏ထူးခြားရက်များ</string>
    <string name="mya_era">မြန်မာသက္ကရာဇ်</string>
    <string name="title_activity_license">Licenses</string>
    <string name="title_activity_about">About</string>
    <string name="action_license">Licenses</string>
    <string name="action_about_us">About</string>
    <string name="open_source_licenses">The app\'s been made possible to shine to its best by leveraging the following open source projects and software.</string>
    <string name="license_item_title">Notices for</string>
    <string name="small_circle">small circle</string>

    <string name="calendar_calculation">&lt;a href=\"http://cool-emerald.blogspot.sg/2013/06/algorithm-program-and-calculation-of.html\">Myanmar Calendar Calculations&lt;/a> by Ko Yan Naing Aye</string>
    <string name="mmText">&lt;a href=\"https://github.com/htoomyintnaung/mmtext\">mmText&lt;/a> by Ko Htoo Myint Naung</string>
    <string name="circular_reveal">&lt;a href=\"https://github.com/ozodrukh/CircularReveal\">CircularReveal animation&lt;/a> by ozodrukh</string>
    <string name="listview_animations">&lt;a href=\"https://github.com/nhaarman/ListViewAnimations\">ListViewAnimations&lt;/a> by nhaarman</string>
    <string name="material_datepicker">&lt;a href=\"https://github.com/wdullaer/MaterialDateTimePicker\">MaterialDateTimePicker&lt;/a> by wdullaer</string>
    <string name="google_iconset">&lt;a href=\"http://www.google.com/design/spec/style/icons.html#icons-system-icons\">Material design icons&lt;/a> by Google</string>
    <string name="version">Version 0.1.1(Ibis)</string>
    <string name="calendar_about">ပြက္ခဒိန်</string>
    <string name="naung_inle_about">hilllander</string>
    <string name="special_thanks">Special thanks to :</string>
    <string name="contributors"><b><i>Boam Boan</i></b> for awesome fotos\n<b><i>James Pu</i></b> for cool app icon\n<b><i>Saw Phyu</i></b> for general support and\nlast but not least,<b><i>Ko Kyaw Thein</i></b> (Advance Institute Taunggyi) for general support and play store account to host the app.</string>
    <string name="copyright">Copyright © 2015 khunzohn</string>
    <string name="developer_by_khunzohn">Developed by khunzohn</string>
    <string name="what_new">what\'s new</string>
    <string name="summary_0_1_1">In version 0.1.1 (Ibis) release, lollipop incompatibility issue is fixed.
    Some market day Photos are removed for the sake of app\'s size. Status bar
        is re-designed to meet the material design guide lines.
        Rate this app menu item.Feedback sending option.What\'s new menu item.\n\n
    Any bug report or feature requests are thankfully welcome. </string>
    <string name="full_changes">Full changes</string>
    <string name="ver_0_1_1">0.1.1 (Ibis)</string>
    <string name="rate_me">Rate this app</string>
    <string name="what_new_title">What\'s new in this hot bug fix (Ibis)?</string>
    <string name="send">ပို့မယ်</string>
    <string name="cancel">တော်ပါပြီ</string>
    <string name="feedback">အကြံပေးမယ်</string>
    <string name="feedback_tip">သံုးရတာအဆင်ပြေမပြေ ထပ်မံဖြည့်စွက်လိုသည်များ အချက်အလက်မှားယွင်းမူများ စသဖြင့်ကောင်းသည်ဆိုးသည်ဝေဖန်အကြံပြုနိုင်ပါသည်</string>
    <string-array name="author">
        <item>Ko Yan Naing Aye</item>
        <item>Ko Htoo Myint Naung</item>
        <item>ozodrukh</item>
        <item>nhaarman</item>
        <item>wdullaer</item>
    </string-array>
    <string-array name="license_text">
        <item>Myanmar Calendrical Calculations by Yan Naing Aye is licensed
        under a Creative Commons Attribution 3.0 Unported License.
        http://creativecommons.org/licenses/by/3.0/
	You are free:
    to Share — to copy, distribute and transmit the work
    to Remix — to adapt the work
    to make commercial use of the work
    Attribution — You must attribute Myanmar Calendrical Calculations
		to Yan Naing Aye (with link).</item>
        <item>           DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
                    Version 2, December 2004

 Copyright © 2004 Sam Hocevar sam@hocevar.net

 Everyone is permitted to copy and distribute verbatim or modified
 copies of this license document, and changing it is allowed as long
 as the name is changed.

            DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
   TERMS AND CONDITIONS FOR COPYING, DISTRIBUTION AND MODIFICATION

  0. You just DO WHAT THE FUCK YOU WANT TO.</item>
        <item>The MIT License (MIT)

Copyright © 2014 Abdullaev Ozodrukh

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in
all copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.</item>
        <item>Copyright © 2014 Niek Haarman

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</item>
        <item>Copyright © 2015 Wouter Dullaert

Licensed under the Apache License, Version 2.0 (the \"License\");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an \"AS IS\" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</item>
        <item>
            We have made these icons available for you to incorporate them into your products under the [Creative Common Attribution 4.0 International License (CC-BY 4.0)](http://creativecommons.org/licenses/by/4.0/). Feel free to remix and re-share these icons and documentation in your
products.  We\'d love attribution in your app\'s *about* screen, but it\'s not required. The only thing we ask is that you not re-sell
the icons themselves.
        </item>
    </string-array>
    <string-array name="version">
        <item>0.1.1 (Ibis)</item>
        <item>0.1_beta (Ibis)</item>
    </string-array>
    <string-array name="feature_list_0_1_1">
        <item>Fixed lollipop incompatibility issue.</item>
        <item>Removed some market days photos to reduce app\'s size.</item>
        <item>Redesigned status bar according to Material design guide lines.</item>
    </string-array>
    <string-array name="feature_list_0_1">
        <item>Myanmar date</item>
        <item>Western date</item>
        <item>Local holidays</item>
        <item>Global holidays</item>
        <item>Local market days</item>
        <item>Market day\'s photos ( 8 altogether)</item>
    </string-array>

</resources>
