<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.hilllander.naunginlecalendar.view.activity.MainActivity">
    <item
        android:id="@+id/today"
        android:icon="@drawable/today_icon"
        android:orderInCategory="100"
        android:title="@string/today"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:id="@+id/date_picker"
        android:icon="@drawable/dp_dark"
        android:orderInCategory="100"
        android:title="@string/date_picker"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_license"
        android:orderInCategory="100"
        android:title="@string/action_license"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_about_us"
        android:orderInCategory="100"
        android:title="@string/action_about_us"
        app:showAsAction="never" />
</menu>
