<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/month_grid">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/engMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:textColor="@color/green" />

            <TextView
                android:id="@+id/engYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <mm.technomation.mmtext.MMTextView
                android:id="@+id/myaYearRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:textColor="@color/green"
                android:textSize="@dimen/extra_small_text" />

            <mm.technomation.mmtext.MMTextView
                android:id="@+id/myaMonthRange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:textColor="@color/green"
                android:textSize="@dimen/extra_small_text" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_elevation_height"
            android:layout_above="@+id/week_day"
            android:background="@drawable/shadow" />

        <LinearLayout
            android:id="@+id/week_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:weightSum="7">

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sun"
                android:textColor="@color/red" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mon"
                android:textColor="@color/dark_blue" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/tue"
                android:textColor="@color/dark_blue" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/wed"
                android:textColor="@color/dark_blue" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/thu"
                android:textColor="@color/dark_blue" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/fri"
                android:textColor="@color/dark_blue" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/sat"
                android:textColor="@color/red" />
        </LinearLayout>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/month_grid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/month_grid_height"
        android:layout_alignParentBottom="true">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_month"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/grey"
            android:clipToPadding="false"
            android:padding="@dimen/item_offset" />
    </FrameLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/fab_day_right_margin"
        android:layout_marginEnd="@dimen/fab_day_right_margin"
        android:layout_marginRight="@dimen/fab_day_right_margin"
        android:src="@drawable/add"
        app:backgroundTint="@color/pinky" />


</RelativeLayout>