<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hilllander.naunginlecalendar.view.fragment.WhatNewDialogFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/tv_padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:text="@string/what_new"
                android:textStyle="bold" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:text="@string/summary_0_1_1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/tv_padding"
                android:text="@string/full_changes"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/whatIsNewRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/pinky" />
        </LinearLayout>
    </ScrollView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <mm.technomation.mmtext.MMButtonView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:text="@string/mdtp_ok"
            android:textColor="@color/accent" />
    </FrameLayout>


</RelativeLayout>
