<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".WelcomeActivity">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="end"
        android:layout_weight="5"
        android:background="@drawable/welcome_art_upper">

        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="24dp"
            android:orientation="vertical"
            android:padding="@dimen/padding_16_dp">

            <mm.technomation.mmtext.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/tv_padding"
                android:text="@string/naung_inle"
                android:textColor="@color/milk"
                android:textSize="@dimen/large_text" />

            <mm.technomation.mmtext.MMTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/tv_padding"
                android:text="@string/calendar"
                android:textColor="@color/milk"
                android:textSize="@dimen/large_text" />
        </LinearLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:background="@drawable/welcome_art_lower">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginBottom="16dp"
            android:padding="@dimen/tv_padding"
            android:text="@string/developer_by_khunzohn"
            android:textColor="@color/primary" />
    </FrameLayout>

</LinearLayout>
