<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hilllander.naunginlecalendar.view.activity.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/primary"
        app:popupTheme="@style/ThemeOverlay.AppCompat"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <View
        android:id="@+id/about_toolbar_shadow"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_elevation_height"
        android:layout_below="@id/toolbar"
        android:background="@drawable/toolbar_drop_shadow" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/about_toolbar_shadow">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/welcome_background"
            android:orientation="vertical"
            android:weightSum="10">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_gravity="start"
                android:layout_weight="5"
                android:background="@drawable/upper_art"
                android:padding="@dimen/padding_16_dp">

                <mm.technomation.mmtext.MMTextView
                    android:id="@+id/naungInle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="24dp"
                    android:text="@string/naung_inle"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/extra_large_text" />

                <mm.technomation.mmtext.MMTextView
                    android:id="@+id/calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/naungInle"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/padding_16_dp"
                    android:text="@string/calendar_about"
                    android:textColor="@color/dark_blue" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/calendar"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="@dimen/padding_16_dp"
                    android:text="@string/version"
                    android:textColor="@color/primary" />
            </RelativeLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5"
                android:background="@drawable/lower_art">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_marginBottom="48dp"
                    android:layout_marginLeft="100dp"
                    android:layout_marginStart="100dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:padding="@dimen/tv_padding"
                        android:text="@string/special_thanks"
                        android:textColor="@color/milk" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="4dp"
                        android:background="@color/milk" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:padding="@dimen/tv_padding"
                        android:text="@string/contributors"
                        android:textColor="@color/milk" />


                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="16dp"
                    android:padding="@dimen/tv_padding"
                    android:text="@string/copyright"
                    android:textColor="@color/milk"
                    android:textSize="@dimen/small_text" />

            </FrameLayout>

        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:layout_marginEnd="@dimen/fab_day_right_margin"
            android:layout_marginRight="@dimen/fab_day_right_margin"
            android:src="@drawable/facebook_icon"
            app:backgroundTint="@color/dark_blue" />

    </FrameLayout>


</RelativeLayout>
